@@ -434,6 +434,10 @@ define function, begin
 425,getwrap,1,0               #return true if a text slice wraps
 426,setwrap,2,0,1             #change the wrapping state of a text slice
 427,sliceistext,1,0           #return true if the given slice handle is a text slice
+428,gettextbg,1,0             #return text background color
+429,settextbg,2,0,0           #change text background color
+430,getoutline,1,0            #return true if text uses outline
+431,setoutline,2,0,1          #change text's outline mode
 end
 
 #--------------------------------------------------------------------------
